--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Aarav Hattangadi <aarav@hattangadi.com> (https://www.hattangadi.com/)",
   "license": "MIT",
   "dependencies": {
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "node-echo": "^0.1.1"
   }
 }
