I forgot what all i did

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "node_pass_man",
   "version": "0.1.0",
   "description": "A CLI Password Manager.",
-  "main": "index.js",
-  "bin": "index.js",
+  "main": "Windows/index.js",
+  "bin": "Windows/index.js",
   "keywords": [],
   "author": "Aarav Hattangadi <aarav@hattangadi.com> (https://www.hattangadi.com/)",
   "license": "MIT",
   "dependencies": {
+    "echo": "^0.1.9",
     "inquirer": "^7.3.3",
     "node-echo": "^0.1.1",
     "nodeshell": "0.0.5",
